# Unitory

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.dev.yml  compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: lint.yml  release.yml  test-integration.yml  test-unit.yml
app/: config.py  deps.py  main.py
app/models/: __init__.py  discovery_job.py  server.py  user.py
app/routes/: admin.py  api.py  auth.py  health.py  web.py
app/services/: discovery.py  markdown.py  node_exporter.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: 403.html  base.html  index.html
app/templates/admin/: _job_status.html  _job_status_row.html  discovery.html  index.html  users.html
app/templates/partials/: rescan_status.html  search_results.html
app/templates/servers/: detail.html  form.html  list.html
tests/: conftest.py  test_config.py  test_discovery_parser.py  test_health.py  test_markdown.py  test_server_discovery_fields.py  test_server_model.py
tests/fixtures/: node_exporter_rsctdb.txt  node_exporter_sample.txt
worker/: entrypoint.sh  healthcheck.py
