[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unitory"
version = "0.1.0"
description = "Server inventory management for Binghamton University Linux servers."
requires-python = ">=3.13"
readme = "README.md"
authors = [{ name = "Binghamton University" }]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
markers = [
    "unit: runs without external services (pure logic, mocks only)",
    "integration: requires MongoDB / Redis (docker compose or GitHub services)",
]
